    * Page.last_edit() is DEPRECATED, please use Page.edit_info().
    * Page._last_edited() is GONE (was broken anyway), please use
      Page.editlog_entry().

Version 1.7.0beta1:

  New Features:
    * New powerful and flexible logging, please see wiki/config/logging/ -
      HINT: you have to upgrade your server adaptor script (e.g. moin.cgi)
      and load a logging configuration that fits your needs from there.
      If you use some of our sample logging configs, make sure you have a
      look INTO them to fix e.g. the path of the logfile it will use.
    * Moin now logs the path from where it loaded its configuration(s)
    * cfg.trusted_auth_methods is a list of auth methods that put an
      authenticated user into the "Trusted" ACL group.
    * New authentication plugin system, see HelpOnAuthentication.
    * New session handling system (no moin_session any more, now done
      internally and automatically), see HelpOnSessions for details.
    * New preferences plugin system, see MoinMoin/userprefs/__init__.py
    * New notification system with an optional jabber notification bot.
    * Jabber notification support; for more information see HelpOnNotification.
    * Standalone server can now be started via the "moin" script command,
      optionally backgrounding itself. See: moin server standalone --help
    * The diff action now has navigation buttons for prev/next change.
    * Admonition support. Added styling for tip, note, important, warning 
      and caution in the modern theme. For more info see HelpOnAdmonitions.
    * DocBook-formatter:
      * supports HTML entities like &rarr; and &#9731;
      * supports the FootNote macro
      * supports bulletless lists
      * support for admonitions
      * will export the wiki page's edit history as the generated article's
        revision history. Doesn't add history of included pages.
      * supports for the MoinMoin comment element, though only inline comments